[gd_scene load_steps=2 format=3 uid="uid://5u417oy30ufy"]

[ext_resource type="Script" uid="uid://c7cbf1casjb8h" path="res://src/scene/about.gd" id="1_about"]

[node name="AboutScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_about")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "关于 BitMap"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][b]BitMap 像素地图编辑器[/b][/center]

[color=yellow][b]操作指南[/b][/color]

[color=cyan][b]基础操作[/b][/color]
• [b]生成地形[/b]: 按 [color=white]1[/color] 键生成新的随机地形地图
• [b]游戏控制[/b]:
  - [color=white]ESC[/color] 键：返回主菜单
  - [color=white]P[/color] 键：暂停/继续游戏

[color=cyan][b]鼠标控制[/b][/color]
• [b]左键[/b]：放置城市或绘制道路
• [b]右键[/b]：移除城市或删除道路

[color=cyan][b]视角控制[/b][/color]
• [b]WASD[/b]：移动视角
• [b]Q键[/b]：放大地图
• [b]E键[/b]：缩小地图

[color=cyan][b]建造模式[/b][/color]
• [b]绘制模式[/b]：
  - 按住鼠标左键拖拽连续放置城市
  - 按住鼠标右键拖拽连续移除城市
  - 适合快速大面积建造

• [b]道路模式[/b]：
  - 左键点击开始绘制道路（铁路、高速公路或公路）
  - 继续左键点击添加中间点
  - 再次左键点击城市或空白处结束绘制
  - 右键取消当前道路绘制
  - 按住右键拖拽可以连续删除多条道路

[color=cyan][b]地形系统[/b][/color]
支持8级高度图地形：深海、深水、浅水、海岸、平原、丘陵、山地、高山

[color=cyan][b]城市系统[/b][/color]
• 使用中国古典风格名称
• 每个城市都有唯一名称，避免重复
• 支持点击城市进行交互
• 城市可以连接到道路网络"

[node name="VersionLabel" type="Label" parent="CanvasLayer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "版本: v0.0.0"
horizontal_alignment = 1

[node name="UpdateLabel" type="Label" parent="CanvasLayer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "MoYuStudio 荣誉出品"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "返回主菜单"
